--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </a>
         <nav class="desktop-navigation">
             <a class="navigation-link" href="#products">Products</a>
-            <a class="navigation-link" href="#gallery">Gallery</a>
+            <!-- <a class="navigation-link" href="#gallery">Gallery</a> -->
             <a class="navigation-link" href="#about-us">About Us</a>
         </nav>
         <div class="desktop-cta">
@@ -47,7 +47,7 @@
         <div class="mobile-menu">
           <nav class="mobile-navigation">
             <a class="navigation-link" href="#products">Products</a>
-            <a class="navigation-link" href="#gallery">Gallery</a>
+            <!-- <a class="navigation-link" href="#gallery">Gallery</a> -->
             <a class="navigation-link" href="#about-us">About Us</a>
             <a class="navigation-link" href="#footer">Contact Us</a>
           </nav>
@@ -89,16 +89,16 @@
             <div class="carousel">
               <!-- 1st slide -->
               <div class="slide">
-                <h2 class="carousel-title">Upgrade your space with precision-engineered aluminum windows and facades from Aluline! Offering high-quality, sleek, and durable solutions that elevate your home or business. Discover the future of architecture today!</h2>
+                <h2 class="carousel-title">Upgrade your space with precision-engineered aluminum windows and doors from Aluline! Offering high-quality, sleek, and durable solutions that elevate your home or business. Discover the future of architecture today!</h2>
               </div>
               <!-- 2nd slide -->
               <div class="slide">
-                <h2 class="carousel-title">At Aluline, we combine innovation and strength to provide aluminum solutions that stand the test of time. Whether for residential or commercial projects, we guarantee top-notch quality and design. Trust the experts!</h2>
+                <h2 class="carousel-title">At Aluline, we combine innovation and strength to provide aluminum windows and doors that stand the test of time. Whether for residential or commercial projects, we guarantee top-notch quality and design. Trust the experts!</h2>
               </div>
               <!-- 3rd slide -->
-               <div class="slide">
-                <h2 class="carousel-title">From modern windows to stunning facades, Aluline delivers outstanding aluminum construction solutions tailored to your needs. Energy-efficient, stylish, and reliable – transform your property with Aluline today!"</h2>
-               </div>
+              <div class="slide">
+                <h2 class="carousel-title">From modern windows to stylish doors, Aluline delivers outstanding aluminum solutions tailored to your needs. Energy-efficient, stylish, and reliable – transform your property with Aluline today!</h2>
+              </div>
             </div>
             <!-- Custom slider buttons -->
             <div class="carousel-buttons">
@@ -111,6 +111,7 @@
             </div>
           </div>
         </section>
+
       <!-- End of News Carousel Section -->
 
       <!-- Features Section -->
@@ -121,40 +122,39 @@
               <p class="text-sm">Innovative</p>
             </div>
             <h4 class="display-md">Premium Aluminum Solutions</h4>
-            <p class="text">Discover our range of high-quality aluminum windows, doors, facade systems, and frames, designed to elevate your building’s performance and style.</p>
+            <p class="text">Discover our range of high-quality aluminum windows, doors, frames, designed to elevate your building’s performance and style.</p>
           </div>
 
           <div class="three-columns features-list">
             <div class="features-item">
-            <p class="text-lg">High-Quality Reynaers Windows</p>
-            <p class="text-md">We use Reynaers aluminum windows for their superior energy efficiency and elegant design, enhancing both functionality and aesthetics.</p>
-          </div>
+              <p class="text-lg">High-Quality Reynaers Windows</p>
+              <p class="text-md">We use Reynaers aluminum windows for their superior energy efficiency and elegant design, enhancing both functionality and aesthetics for your home or business.</p>
+            </div>
 
-          <div class="features-item">
-            <p class="text-lg">Premium Aluminum Windows</p>
-            <p class="text-md">We use top-quality aluminum windows that combine elegance and energy efficiency, providing maximum comfort and security for your space.</p>
-          </div>
+            <div class="features-item">
+              <p class="text-lg">Premium Aluminum Windows</p>
+              <p class="text-md">We offer top-quality aluminum windows that combine elegance and energy efficiency, providing maximum comfort, security, and style for your space.</p>
+            </div>
 
-          <div class="features-item">
-            <p class="text-lg">Sleek Aluminum Doors</p>
-            <p class="text-md">Our aluminum doors offer modern design, exceptional durability, and superior insulation, making them perfect for any building.</p>
-          </div>
+            <div class="features-item">
+              <p class="text-lg">Sleek Aluminum Doors</p>
+              <p class="text-md">Our aluminum doors feature modern design, exceptional durability, and superior insulation, making them perfect for both residential and commercial properties.</p>
+            </div>
 
-          <div class="features-item">
-            <p class="text-lg">Innovative Facade Systems</p>
-            <p class="text-md">We create advanced facade systems that enhance the aesthetics and functionality of buildings, providing both style and protection.</p>
-          </div>
+            <div class="features-item">
+              <p class="text-lg">Innovative Aluminum Solutions</p>
+              <p class="text-md">We create advanced aluminum solutions for doors and windows that enhance the aesthetics and functionality of your building, ensuring both style and protection.</p>
+            </div>
 
-          <div class="features-item">
-            <p class="text-lg">Durable Aluminum Canopies</p>
-            <p class="text-md">Our aluminum canopies provide stylish protection from the elements, designed to withstand all weather conditions while maintaining a sleek appearance.</p>
-          </div>
+            <div class="features-item">
+              <p class="text-lg">Durable Aluminum Frames</p>
+              <p class="text-md">Our precision-engineered aluminum frames offer sturdy and lightweight structures, ensuring long-lasting performance for both windows and doors.</p>
+            </div>
 
-          <div class="features-item">
-            <p class="text-lg">High-Performance Aluminum Frames</p>
-            <p class="text-md">With our precision-engineered aluminum frames, you get sturdy and lightweight structures that ensure long-lasting performance for all types of projects.</p>
-          </div>
-
+            <div class="features-item">
+              <p class="text-lg">High-Performance Aluminum Doors and Windows</p>
+              <p class="text-md">With our high-performance aluminum doors and windows, you get top-tier energy efficiency, durability, and sleek design that perfectly complement your property's needs.</p>
+            </div>
           </div>
         </div>
        </section>
