--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="text-section">
               <img class="logo" src="./images/logo.png" alt="ALULINE logo">
               <h2 class="title-xl">ALULINE</h2>
-              <p class="title-md">Aluminum windows and facades</p>
+              <p class="title-md">Premium Aluminum Windows and Doors</p>
             </div>
           </div>
           <div class="three-columns">
