--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <nav class="desktop-navigation">
           <a class="navigation-link" href="#about-us">About Us</a>
           <a class="navigation-link" href="#products">Products</a>
+          <a class="navigation-link" href="#gallery">Gallery</a>
         </nav>
         <div class="desktop-cta">
           <a href="#footer" class="button-cta small">Contact Us</a>
@@ -49,6 +50,7 @@
           <nav class="mobile-navigation">
             <a class="navigation-link" href="#about-us">About Us</a>
             <a class="navigation-link" href="#products">Products</a>
+            <a class="navigation-link" href="#gallery">Gallery</a>
             <a class="navigation-link" href="#footer">Contact Us</a>
           </nav>
           <div class="mobile-menu-footer">
@@ -159,6 +161,42 @@
         </div>
        </section>
       <!-- End of Features Section -->
+
+       <seciton class="section hero" id="gallery">
+        <div class="container">
+            <!-- Main Slider -->
+            <div class="slider-for">
+                <div><img src="./images/1.png" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/2.png" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/4.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/5.png" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/6.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/7.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/8.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/9.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/10.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/11.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/3.png" alt="Aluminum construction" loading="lazy"></div>
+            </div>
+            
+            <!-- Thumbnail Navigation Slider -->
+            <div class="slider-nav">
+                <div><img src="./images/1.png" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/2.png" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/4.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/5.png" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/6.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/7.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/8.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/9.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/10.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/11.jpg" alt="Aluminum construction" loading="lazy"></div>
+                <div><img src="./images/3.png" alt="Aluminum construction" loading="lazy"></div>
+
+            </div>
+        </div>
+       </seciton>
+      <!-- End of HERO Section -->
 
     </main>
 
