--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
 
           <div class="three-columns features-list">
             <div class="features-item">
-              <p class="text-lg">High-Quality Reynaers Windows</p>
-              <p class="text-md">We use Reynaers aluminum windows for their superior energy efficiency and elegant design, enhancing both functionality and aesthetics for your home or business.</p>
+              <p class="text-lg">Premium Aluminum Windows</p>
+              <p class="text-md">We use high-end aluminum windows known for their exceptional energy efficiency and refined design, elevating both the functionality and aesthetic appeal of your home or business.</p>
             </div>
+
 
             <div class="features-item">
               <p class="text-lg">Premium Aluminum Windows</p>
