--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
             <div class="badge">
               <p class="text-sm">Innovative</p>
             </div>
-            <h4 class="display-md">Premium Aluminum Solutions</h4>
+            <h4 class="display-md">Energy-efficient Solutions</h4>
             <p class="text">Discover our range of high-quality aluminum windows, doors, frames, designed to elevate your building’s performance and style.</p>
           </div>
 
           <div class="three-columns features-list">
             <div class="features-item">
-              <p class="text-lg">Premium Aluminum Windows</p>
-              <p class="text-md">We use high-end aluminum windows known for their exceptional energy efficiency and refined design, elevating both the functionality and aesthetic appeal of your home or business.</p>
+              <p class="text-lg">High-Quality Aluminum Constructions</p>
+              <p class="text-md">We use high-end aluminum windows and doors known for their exceptional energy efficiency and refined design, elevating both the functionality and aesthetic appeal of your home or business.</p>
             </div>
 
 
